# lpm

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  plugins-release.yml  release.yml  wiki-sync.yml
benches/: performance_benchmarks.rs
crates/lpm-bundle/: Cargo.toml
crates/lpm-bundle/src/: bundle.rs  main.rs
crates/lpm-bundle/src/bundler/: core.rs  minifier.rs  mod.rs  parser.rs  resolver.rs  tree_shaker.rs
crates/lpm-core/: Cargo.toml
crates/lpm-core/src/: lib.rs
crates/lpm-core/src/core/: credentials.rs  error.rs  error_help.rs  mod.rs  path.rs  version.rs
crates/lpm-core/src/package/: manifest.rs  mod.rs
crates/lpm-core/src/path_setup/: loader.rs  mod.rs  runner.rs
crates/lpm-watch/: Cargo.toml
crates/lpm-watch/src/: main.rs  ui.rs  watch.rs  websocket.rs
docs/contributing/: Architecture.md  Contributing.md  Creating-Releases.md  Development-Setup.md  Git-Hooks.md  GitHub-Actions.md  Plugin-Development.md  Release-Process.md  Testing.md
docs/user/: CLI-Commands.md  Getting-Started.md  Home.md  Installation.md  Lua-Version-Manager.md  Package-Management.md  Plugins.md  Rust-Extensions.md  Security.md  Templates.md  Troubleshooting.md
releases/: README.md
scripts/: build-installer.sh  update-coverage-badge.sh
src/: lib.rs  main.rs
src/cache/: mod.rs
src/cli/: audit.rs  build.rs  clean.rs  exec.rs  generate_rockspec.rs  init.rs  install.rs  list.rs  login.rs  lua.rs  mod.rs  outdated.rs  package.rs  publish.rs  remove.rs  run.rs  update.rs  verify.rs
src/cli/plugin/: commands.rs  config.rs  installer.rs  metadata.rs  mod.rs  registry.rs
src/cli/template/: commands.rs  discovery.rs  metadata.rs  mod.rs  renderer.rs
src/config/: mod.rs
src/core/: mod.rs  path.rs  path_setup.rs
src/lua_manager/: downloader.rs  mod.rs  switcher.rs  versions.rs  wrappers.rs
src/lua_version/: compatibility.rs  constraint.rs  detector.rs  mod.rs
src/luarocks/: client.rs  manifest.rs  mod.rs  rockspec.rs  rockspec_parser.rs  search_api.rs  version.rs
src/package/: checksum.rs  conflict_checker.rs  converter.rs  downloader.rs  extractor.rs  installer.rs  interactive.rs  lockfile.rs  lockfile_builder.rs  mod.rs  packager.rs  rollback.rs  update_diff.rs  validator.rs  verifier.rs
src/path_setup/: mod.rs
src/publish/: mod.rs  packager.rs  publisher.rs  rockspec_generator.rs  validator.rs
src/resolver/: dependency_graph.rs  dependency_resolver.rs  mod.rs
src/security/: advisory.rs  audit.rs  mod.rs  osv.rs  vulnerability.rs
src/templates/basic-lua/: README.md  template.yaml
src/templates/basic-lua/src/: main.lua
src/templates/cli-tool/: README.md  template.yaml
src/templates/cli-tool/src/: main.lua
src/templates/lapis-web/: README.md  app.lua  nginx.conf  template.yaml
src/templates/lapis-web/views/: index.etlua
src/templates/love2d/: .luarc.json  README.md  conf.lua  main.lua  template.yaml
src/templates/neovim-plugin/: README.md  template.yaml
src/templates/neovim-plugin/lua/{{project_name}}/: init.lua
src/workspace/: finder.rs  mod.rs  workspace_config.rs
tests/: integration_tests.rs  security.rs
