[workspace]
members = ["crates/lpm-core", "crates/lpm-watch", "crates/lpm-bundle"]
resolver = "2"

[package]
name = "lpm"
version = "0.1.0"
edition = "2021"
authors = ["LPM Contributors"]
description = "Local package management for Lua. Because global installs are legacy."
license = "MIT"
repository = "https://github.com/yourusername/lpm"

[[bin]]
name = "lpm"
path = "src/main.rs"

[dependencies]
# Core LPM library
lpm-core = { path = "crates/lpm-core" }

# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for downloading packages
# Using rustls-tls instead of native-tls for better cross-compilation support
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Path handling
pathdiff = "0.2"
dirs = "6.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File I/O and utilities
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"

# Archive extraction
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific keychain support (for credentials)
keyring = "3.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Progress indicators
indicatif = "0.17"

# Plugin discovery
which = "5.0"

# URL encoding for API requests
urlencoding = "2.1"

# Interactive prompts for UX improvements
dialoguer = "0.11"
fuzzy-matcher = "0.3"

# Rockspec parsing (regex-based, no Lua interpreter needed)

# Package management
# (serde and serde_yaml already included above)

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
rusty-hook = "0.11.2"

[[bench]]
name = "performance_benchmarks"
harness = false

