[package]
name = "lpm-core"
version = "0.1.0"
edition = "2021"
authors = ["LPM Contributors"]
description = "Core utilities for LPM (Lua Package Manager)"
license = "MIT"
repository = "https://github.com/yourusername/lpm"

[lib]
name = "lpm_core"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = "2.0"

# YAML parsing (for package.yaml)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Path handling
dirs = "6.0"

# Platform-specific keychain support (for credentials)
keyring = "3.0"

# File I/O
walkdir = "2.4"

# HTTP client (for error types - plugins may need this)
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

[dev-dependencies]
# Testing utilities
tempfile = "3.8"

